# data_curator

./: README.md  curator_rules.json  curator_state.json  pyproject.toml
.github/workflows/: precommit.yml
Tmp Repo Üñíçødé 🚀/: .curator_state.json  unicodé🔥.txt
data_curator_app/: cli.py  config.py  curator_core.py  main.py  rules_engine.py  sorter.py
docs/: COMPENDIUM.md  PROJECT_STRUCTURE.md  SCHEMA.md  developer_diary.md  devlog.md  plan.md  project_organization.md  project_structure  user_feedback.md
scripts/: .pre-commit.swp  pre-commit  pre-commit.txt
tests/: conftest.py  test_cli.py  test_cli_batch.py  test_cli_e2e.py  test_cli_expired.py  test_cli_json.py  test_cli_json_meta.py  test_cli_paging.py  test_cli_patterns_extra.py  test_cli_quiet_and_errors.py  test_cli_rules.py  test_cli_status_validation.py  test_cli_trash.py  test_curator_core.py  test_gui.py  test_integration.py  test_integration_empty_config.py  test_rules_engine.py  test_schema_version.py  test_state_atomic.py  test_state_locking.py
tmp_cli_ops_test/: .curator_state.json
tmp_cli_sort_test/: B.txt
tmp_expired_mark/: .curator_state.json
tmp_quick_wins/: .curator_state.json
tmp_quick_wins2/: .curator_state.json
tmp_trash_collision/: .curator_state.json
