[project]
name = "data-curator"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "data_curator_app"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest = "^8.4.1"

